fix/SOC-6256: fix text align for news content (#249)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/Activity/Style.less
@@ -247,10 +247,13 @@
             }
         }
 
-        .newsBody .seeMore {
-            font-weight: bold;
-            padding-left: 3px;
-        }
+        .newsBody {
+			text-align: justify;
+			.seeMore {
+				font-weight: bold;
+				padding-left: 3px;
+			}
+		}
     }
 }
 
